# CoolPropFromCppPython

./: .gitignore
projects/: CMakeLists.txt
projects/CppClientSln/: CppClientSln.sln  CppClientSln.vcxproj  CppClientSln.vcxproj.filters
projects/Python/: pyClient.py
src/: client.cpp
